# myapp

./: .gitmodules  CMakeLists.txt  stackoverflow_link
myapp/gui/: CMakeLists.txt  printer.cpp  printer.hpp
myapp/main/: CMakeLists.txt  app.cpp
myapp/model/: CMakeLists.txt  user.cpp  user.hpp
